Important changes since GBBopen 1.5:

  * Changes to GBBopen initiate & startup
     - New FUNCALL-IN-PACKAGE function

  * Changes to GBBopen Tools
     - New VERY-BRIEF-DATE function
     - New :include-year keyword argument to BRIEF-DATE
     - Export SORTF and STABLE-SORTF macros

  * Changes to GBBopen
     - New *SKIP-DELETED-UNIT-INSTANCE-CLASS-CHANGE* variable
     - New CHECK-INSTANCE-LOCATORS function
     - New WITH-BLACKBOARD-REPOSITORY-LOCKED macro
     - Documented *FIND-VERBOSE*, *USE-MARKING*, CHECK-FOR-DELETED-INSTANCE


Important changes in GBBopen 1.5:

  * Changes to gbbopen-modules directory processing
     - New *GBBOPEN-MODULES-DIRECTORY-VERBOSE* and *SYM-FILE-VERBOSE* 
       global variables

  * Changes to extended-REPL commands
     - New :lmf (LOAD-MODULE-FILE) REPL command

  * Changes to Module Manager
     - Add :skip-recompile module file option

  * Changes to GBBopen Tools
     - New ASSQ function
     - New DEFCONSTRUCT cons-based 2-field "structure"
     - New DELQ-ONE function
     - New HTTP-DATE-AND-TIME function
     - Change argument order of ENCODE-TIME-OF-DAY
     - New left-leaning red-black (LLRB) tree entities
     - New auto-transitioning EQ set (EQSET), EQ table (ET), and
       auto-transitioning ("fast hash-table") ATABLE entities

  * New :double-metaphone module

  * New :gbbopen-tools-user module

  * Changes to Portable Threads
     - New ATOMIC-INCF& and ATOMIC-DECF& macros
     - Scheduled and periodic function entities moved into a 
       separate file (scheduled-periodic-functions.lisp)

  * Changes to Scheduled and Periodic Functions
     - New :name-test, :marker, :marker-test keyword arguments to 
       MAKE-SCHEDULED-FUNCTION
     - New :marker keyword argument to SCHEDULE-FUNCTION,
       SCHEDULE-FUNCTION-RELATIVE, and UNSCHEDULE-FUNCTION
     - New :warnp keyword argument to UNSCHEDULE-FUNCTION
     - New PAUSE-SCHEDULED-FUNCTION-SCHEDULER, 
       RESUME-SCHEDULED-FUNCTION-SCHEDULER,