@@ -52,6 +52,6 @@
 <li><a href="ref-index.html">Index</a></li>
 </ul>
 <hr /><address><a target="_top" class="address"
-    href="http://GBBopen.org/"><p>The GBBopen Project</a>,<nobr>&nbsp;July 30, 2010</nobr>
-<nobr>9:55&nbsp;EDT</nobr></address><br />
+    href="http://GBBopen.org/"><p>The GBBopen Project</a>,<nobr>&nbsp;August 4, 2010</nobr>
+<nobr>12:06&nbsp;EDT</nobr></address><br />
 </body></html>
